--- a/codi_neo_sem.ipynb
+++ b/codi_neo_sem.ipynb
@@ -356,7 +356,7 @@
         "id": "BUaudKedqi8T"
       },
       "source": [
-        "## Analyse word in sentence"
+        "## Analyze word in sentence"
       ]
     },
     {
